[metadata]
name = spafw37
version = 0.1.0
description = A small example package scaffolded for Python 3.7
author = Ciara Norrish
author_email = minouris@users.noreply.github.com
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7, <4

[options.packages.find]
where = src
