[metadata]
name = spafw37
version = 1.0.0.dev0
description = Simple framework for command line driven applications in Python 3.7
author = Ciara Norrish
author_email = minouris@users.noreply.github.com
url = https://github.com/minouris/spafw37
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7, <4

[options.packages.find]
where = src
